--- a/scss/components/home/_idea.scss
+++ b/scss/components/home/_idea.scss
@@ -17,17 +17,27 @@
         gap: 20px;
 
         @media(min-width: 1199px){
-            @include flex-center-center;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+
         }
 
 
         &__imagen{
             width: 100%;
-
             display: none;
     
             @media(min-width: 1199px){
                 display: block;
+                width: 800px;
+            }
+
+            @media(min-width: 1400px){
+                width: 900px;
+            }
+
+            @media(min-width: 1885px){
+                width: 1600px;
             }
         }
     
