--- a/scss/components/home/_our_products.scss
+++ b/scss/components/home/_our_products.scss
@@ -141,7 +141,8 @@
 			height: 100%;
 
             @media(min-width:1199px ){
-                width: 33% !important;
+                width: 10% !important;
+                height: 100%;
             }
 
 		}
