--- a/css/main.css
+++ b/css/main.css
@@ -929,7 +929,7 @@
     @media (min-width: 768px) {
       .our_products .container-sm {
         grid-template-columns: repeat(2, 1fr);
-        padding: 100px 0; } }
+        padding: 50px 0px; } }
   .our_products__text {
     display: flex;
     align-items: center;
@@ -946,77 +946,92 @@
         .our_products__text h1 {
           width: 80%;
           font-size: 30px; } }
-  .our_products__carousel__decoration {
-    padding-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px; }
-    .our_products__carousel__decoration__controls {
+  .our_products__carousel {
+    width: 100%;
+    height: 300px;
+    overflow: hidden; }
+    .our_products__carousel__decoration {
+      padding-top: 15px;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 10px; }
-      .our_products__carousel__decoration__controls--prev {
+      gap: 20px; }
+      .our_products__carousel__decoration__controls {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        z-index: 2;
-        border: 1px solid #FFFFFF; }
-        .our_products__carousel__decoration__controls--prev svg {
-          width: 30px;
-          fill: #FFFFFF;
-          padding: 5px; }
-        .our_products__carousel__decoration__controls--prev:hover {
-          background-color: #000000;
-          border: 1px solid #F7C50A;
-          cursor: pointer; }
-      .our_products__carousel__decoration__controls--next {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        z-index: 2;
-        border: 1px solid #FFFFFF; }
-        .our_products__carousel__decoration__controls--next svg {
-          width: 35px;
-          fill: #FFFFFF;
-          padding: 5px; }
-        .our_products__carousel__decoration__controls--next:hover {
-          background-color: #000000;
-          border: 1px solid #F7C50A;
-          cursor: pointer; }
-    .our_products__carousel__decoration hr {
-      width: 100%;
-      height: 1px; }
-  .our_products__carousel__imagen {
-    width: 100%;
-    padding: 0 5px; }
-    @media (min-width: 768px) {
-      .our_products__carousel__imagen {
-        padding: 0 18px; } }
-    .our_products__carousel__imagen img {
-      border-radius: 15px; }
+        gap: 10px; }
+        .our_products__carousel__decoration__controls--prev {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 45px;
+          height: 45px;
+          border-radius: 50%;
+          z-index: 2;
+          border: 1px solid #FFFFFF; }
+          .our_products__carousel__decoration__controls--prev svg {
+            width: 30px;
+            fill: #FFFFFF;
+            padding: 5px; }
+          .our_products__carousel__decoration__controls--prev:hover {
+            background-color: #000000;
+            border: 1px solid #F7C50A;
+            cursor: pointer; }
+        .our_products__carousel__decoration__controls--next {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 45px;
+          height: 45px;
+          border-radius: 50%;
+          z-index: 2;
+          border: 1px solid #FFFFFF; }
+          .our_products__carousel__decoration__controls--next svg {
+            width: 35px;
+            fill: #FFFFFF;
+            padding: 5px; }
+          .our_products__carousel__decoration__controls--next:hover {
+            background-color: #000000;
+            border: 1px solid #F7C50A;
+            cursor: pointer; }
+      .our_products__carousel__decoration hr {
+        width: 100%;
+        height: 1px; }
+    .our_products__carousel__imagen {
+      height: 100%;
+      padding: 0 5px; }
+      @media (min-width: 768px) {
+        .our_products__carousel__imagen {
+          padding: 0 18px; } }
+      .our_products__carousel__imagen img {
+        border-radius: 15px; }
 
 .swiper_products {
   width: 100%;
-  height: 80%;
-  overflow: hidden; }
-  @media (min-width: 768px) {
-    .swiper_products {
-      height: 100%; } }
+  height: 80%; }
   .swiper_products .swiper-slide {
     width: 100% !important;
-    height: 100%; }
-    @media (min-width: 1199px) {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center; }
+    @media (min-width: 997px) {
       .swiper_products .swiper-slide {
-        width: 10% !important;
-        height: 100%; } }
+        width: 50% !important; } }
+    @media (min-width: 1299px) {
+      .swiper_products .swiper-slide {
+        width: 33.33% !important; } }
 
 .sale {
   width: 100%;
