--- a/scss/components/home/_our_products.scss
+++ b/scss/components/home/_our_products.scss
@@ -17,8 +17,7 @@
 
         @media(min-width: 768px){
             grid-template-columns: repeat(2, 1fr);
-            padding: 100px 0;
-
+            padding: 50px 0px;
         }
     }
 
@@ -44,11 +43,14 @@
     }
 
     &__carousel{
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
         
         &__decoration{
-            padding-top: 20px ;
-           @include flex-center-center;
-           gap: 20px;
+            padding-top: 15px ;
+            @include flex-center-center;
+            gap: 20px;
 
             &__controls{
                 @include flex-center-center;
@@ -110,7 +112,7 @@
         }
 
         &__imagen{
-            width: 100%;
+            height: 100%;
             padding: 0 5px;
 
             @media(min-width:768px){
@@ -119,7 +121,6 @@
 
             img{
                 border-radius: 15px;
-
             }
 
         }
@@ -130,20 +131,33 @@
 .swiper_products{
 	width: 100%;
 	height: 80%;
-    overflow: hidden;
-
-        @media(min-width:768px){
-            height: 100%;
-        }
+    
 
 		.swiper-slide{
 			width: 100% !important;
 			height: 100%;
+            @include flex-center-center;
+			
+			/* Center slide text vertically */
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			-webkit-box-pack: center;
+			-ms-flex-pack: center;
+			-webkit-justify-content: center;
+			-webkit-box-align: center;
+			-ms-flex-align: center;
+			-webkit-align-items: center;
 
-            @media(min-width:1199px ){
-                width: 10% !important;
-                height: 100%;
-            }
+
+            @media(min-width:997px){
+				width:50% !important;
+
+			}
+
+			@media(min-width: 1299px){
+				width: 33.33% !important;
+			}
 
 		}
 
