--- a/scss/components/us/_situation.scss
+++ b/scss/components/us/_situation.scss
@@ -9,11 +9,16 @@
     background-position: center;
     background-attachment: fixed;
     height: 100%;
+    padding: 30px 0;
+
+    @media(min-width:1199px){
+        padding: 50px 0;
+    }
+
 
     .container-sm{
         @include flex-center-center;
         flex-direction: column;
-        padding: 120px 0;
     }
 
     h1{
@@ -26,18 +31,20 @@
         padding-bottom: 30px;
 
         @media(min-width:768px){
-            font-size: 48px;
+            font-size: 30px;
         }
     }
 
     &__grid{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        padding-top: 60px;
-        gap: 90px;
+        padding-top: 0px;
+        gap: 30px;
 
-        @media(min-width: 1199px){
+        @media(min-width: 768px){
             grid-template-columns: repeat(2, 1fr);
+            padding-top: 60px;
+            gap: 90px;
         }
 
         @media(min-width: 1400px){
@@ -45,11 +52,13 @@
         }
 
         &__item{
-            @include flex-center-center;
+            @include flex-center-start;
             flex-direction: column;
 
-            &:hover{
-                transform: scale(1.2);
+            @media(min-width: 768px){
+                &:hover{
+                    transform: scale(1.2);
+                }
             }
 
             &__logo{
@@ -57,21 +66,20 @@
             }
 
             h2{     
-                font-size: 21px;
+                font-size: 20px;
                 font-weight: bold;
                 color:$mikado_yellow;
                 padding: 20px 0;
             }
 
             p{
-                width: 50%;
-                font-size: 12px;
+                font-size: 15px;
                 font-weight: normal;
                 color: $white;
                 text-align: center;
 
                 @media(min-width: 1400px){
-                    width: 100%;
+                    font-size: 17px;
                 }
             }
         }
