--- a/scss/components/us/_us.scss
+++ b/scss/components/us/_us.scss
@@ -3,9 +3,11 @@
     width: 100%;
     height: 100%;
     background-color: $black;
+    padding: 30px 0;
 
     @media(min-width:1199px){
-        height: 500px;
+        padding:0;
+        height: 650px;
     }
 
     .container-sm{
@@ -19,10 +21,11 @@
     }
 
     &__text{
+        height: 100%;
         
         h1{
             font-weight: 600;
-            font-size: 30px;
+            font-size: 25px;
             color: $mikado_yellow;
             text-shadow: 2px 2px 5px black;
             text-align: center;
@@ -30,7 +33,7 @@
             padding-bottom: 30px;
     
             @media(min-width:768px){
-                font-size: 48px;
+                font-size: 30px;
             }
         }
 
@@ -40,25 +43,25 @@
             letter-spacing: 0.3px;
             text-align: center;
             font-size: 15px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             text-align: justify;
 
             @media(min-width:768px){
                 font-size: 17px;
-                margin-bottom: 20px;
             }
         }
 
     }
 
     &__imagen{
+        position: relative;
         margin: auto;
-        width: 80%;
+        width: 70%;
 
         @media(min-width: 1199px){
             position: relative;
-            bottom: 400px;
-            width: 565px;
+            bottom: 130px;
+            
         }
     }
 }
