--- a/scss/components/gallery/_catalog.scss
+++ b/scss/components/gallery/_catalog.scss
@@ -10,6 +10,10 @@
     background-attachment: fixed;
     padding: 30px 0;
 
+    @media(min-width:1199px){
+        padding: 50px 0;
+    }
+
     .container-sm{
         @include flex-center-center;
         flex-direction: column;
@@ -23,11 +27,10 @@
         text-shadow: 2px 2px 5px black;
         text-align: center;
         text-transform: uppercase;
-        padding-bottom: 20px;
         margin: 0;
 
         @media(min-width:768px){
-            font-size: 48px;
+            font-size: 30px;
             width: 80%;
         }
     }
