--- a/scss/components/services/_our_services.scss
+++ b/scss/components/services/_our_services.scss
@@ -2,19 +2,23 @@
     width: 100%;
 	position: relative;
 	height: auto;
-    bottom: 40px;
+    bottom: 20px;
+    
+    @media(min-width: 1199px){
+        bottom: 120px;
+    }
 
     h1.title{
         color: #1b8233;
         text-align: center;
         font-weight: 900;
-        font-size: 20px;
+        font-size: 25px;
         margin-bottom: 15px;
         text-transform: uppercase;
 
         @media(min-width:768px){
             font-size: 30px;
-            margin-bottom: 30px;
+            margin-bottom:50px;
         }
     }
 
@@ -51,7 +55,6 @@
         
                 @media(min-width:768px){
                     font-size: 30px;
-                    margin-bottom: 30px;
                 }
             }
     
@@ -129,7 +132,6 @@
         
                 @media(min-width:768px){
                     font-size: 30px;
-                    margin-bottom: 30px;
                 }
             }
     
@@ -218,7 +220,6 @@
         
                 @media(min-width:768px){
                     font-size: 30px;
-                    margin-bottom: 30px;
                 }
             }
     
