--- a/scss/components/services/_renewable.scss
+++ b/scss/components/services/_renewable.scss
@@ -3,26 +3,27 @@
 	position: relative;
 	height: 100%;
     background-color: $mikado_yellow;
-    padding: 15px;
+    padding: 30px 15px;
     margin: auto;
-    bottom: 70px;
+    bottom: 50px;
 
     @media(min-width:1199px){
+        bottom: 70px;
         bottom: 170px;
-        padding: 30px;
+        padding: 50px 30px;
     }
 
     &__title_subtitle{
         h1{
             font-weight: 600;
-            font-size: 30px;
+            font-size: 25px;
             color: $black;
             text-align: center;
-            padding-bottom: 30px;
+            padding-bottom: 20px;
           
     
             @media(min-width:768px){
-                font-size: 36px;
+                font-size: 30px;
             }
         }
 
@@ -37,7 +38,6 @@
 
             @media(min-width:768px){
                 font-size: 17px;
-                margin-bottom: 35px;
             }
         }
 
@@ -46,7 +46,7 @@
     &__grid{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 30px;
+        gap: 20px;
 
         @media(min-width:768px){
             grid-template-columns: repeat(2, 1fr);
@@ -54,7 +54,6 @@
 
         @media(min-width:1199px){
             grid-template-columns: repeat(4, 1fr);
-            gap: 50px;
         }
 
         &__item{
@@ -62,7 +61,11 @@
             flex-direction: column;
 
             &__icon{
-                height: 120px;
+                height: 90px;
+
+                @media(min-width:1199px){
+                    height: 120px;
+                }
             }
 
             &__text{
@@ -74,10 +77,11 @@
                     font-size: 15px;
                     text-align: center;
                     font-weight: bold;
-                    padding: 20px 0 0 0;
+                    padding: 10px 0 0 0;
         
                     @media(min-width:768px){
                         font-size: 17px;
+                        padding: 20px 0 0 0;
                     }
                 }
             }
