--- a/scss/components/services/_offer.scss
+++ b/scss/components/services/_offer.scss
@@ -35,7 +35,7 @@
 
         h1{
             font-weight: 600;
-            font-size: 25px;
+            font-size: 30px;
             color: $mikado_yellow;
             text-shadow: 2px 2px 5px black;
             text-align: center;
@@ -47,8 +47,12 @@
                 margin-bottom: 30px;
             }
 
-            @media(min-width:1199px){
-                font-size: 30px;
+            @media(min-width:1400px){
+                font-size: 40px;
+            }
+
+            @media(min-width:1700px){
+                font-size: 48px;
             }
     
         }
