--- a/scss/components/us/_us.scss
+++ b/scss/components/us/_us.scss
@@ -25,15 +25,19 @@
         
         h1{
             font-weight: 600;
-            font-size: 25px;
+            font-size: 30px;
             color: $mikado_yellow;
             text-shadow: 2px 2px 5px black;
             text-align: center;
             text-transform: uppercase;
             padding-bottom: 30px;
+            
+            @media(min-width:1400px){
+                font-size: 40px;
+            }
     
-            @media(min-width:768px){
-                font-size: 30px;
+            @media(min-width:1700px){
+                font-size: 48px;
             }
         }
 
