--- a/css/main.css
+++ b/css/main.css
@@ -1174,15 +1174,18 @@
     height: 100%; }
     .us__text h1 {
       font-weight: 600;
-      font-size: 25px;
+      font-size: 30px;
       color: #F7C50A;
       text-shadow: 2px 2px 5px black;
       text-align: center;
       text-transform: uppercase;
       padding-bottom: 30px; }
-      @media (min-width: 768px) {
+      @media (min-width: 1400px) {
         .us__text h1 {
-          font-size: 30px; } }
+          font-size: 40px; } }
+      @media (min-width: 1700px) {
+        .us__text h1 {
+          font-size: 48px; } }
     .us__text p {
       color: #FFFFFF;
       line-height: 26px;
@@ -1623,7 +1626,7 @@
         width: 565px; } }
   .offer__text h1 {
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     color: #F7C50A;
     text-shadow: 2px 2px 5px black;
     text-align: center;
@@ -1633,9 +1636,12 @@
       .offer__text h1 {
         text-align: start;
         margin-bottom: 30px; } }
-    @media (min-width: 1199px) {
+    @media (min-width: 1400px) {
       .offer__text h1 {
-        font-size: 30px; } }
+        font-size: 40px; } }
+    @media (min-width: 1700px) {
+      .offer__text h1 {
+        font-size: 48px; } }
   .offer__text p {
     color: #FFFFFF;
     line-height: 26px;
@@ -1922,7 +1928,7 @@
     color: #F7C50A;
     text-shadow: 2px 2px 5px black;
     text-align: center;
-    margin-bottom: 20px; }
+    margin-bottom: 30px; }
     @media (min-width: 1199px) {
       .benefit h1.title {
         font-size: 30px; } }
@@ -1960,7 +1966,7 @@
       justify-content: center;
       flex-direction: column; }
       .benefit__grid__item__icon {
-        width: 150px; }
+        width: 100px; }
       .benefit__grid__item__text h1 {
         color: #FFFFFF;
         font-size: 15px;
@@ -2008,9 +2014,6 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
-  @media (min-width: 1199px) {
-    .hero_products {
-      height: 800px; } }
 
 .title_products {
   width: 100%;
@@ -2028,7 +2031,7 @@
   .title_products h1 {
     width: 100%;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     color: #F7C50A;
     text-shadow: 2px 2px 5px black;
     text-align: center;
@@ -2036,8 +2039,13 @@
     margin: 0; }
     @media (min-width: 768px) {
       .title_products h1 {
-        font-size: 48px;
         width: 80%; } }
+    @media (min-width: 1400px) {
+      .title_products h1 {
+        font-size: 40px; } }
+    @media (min-width: 1700px) {
+      .title_products h1 {
+        font-size: 48px; } }
 
 .instalation {
   position: relative;
@@ -2068,7 +2076,7 @@
         width: 100%;
         text-align: center;
         color: #fff;
-        font-size: 20px;
+        font-size: 25px;
         font-weight: 600;
         text-transform: uppercase; }
         @media (min-width: 768px) {
@@ -2127,10 +2135,10 @@
   width: 100%;
   width: 100%;
   overflow: hidden;
-  padding: 15px 0; }
+  padding: 30px 0; }
   @media (min-width: 1199px) {
     .panels {
-      padding: 30px 0; } }
+      padding: 50px 0; } }
   .panels .container-sm {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
