--- a/css/main.css
+++ b/css/main.css
@@ -2204,9 +2204,6 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
-  @media (min-width: 1199px) {
-    .hero_distributor {
-      height: 800px; } }
 
 .distributor {
   width: 100%;
@@ -2230,7 +2227,7 @@
   .distributor__title h1 {
     width: 100%;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 20px;
     color: #F7C50A;
     text-shadow: 2px 2px 5px black;
     text-align: start;
@@ -2240,7 +2237,7 @@
     text-align: center; }
     @media (min-width: 768px) {
       .distributor__title h1 {
-        font-size: 48px; } }
+        font-size: 30px; } }
   .distributor__title p {
     font-size: 20px;
     color: #FFFFFF;
@@ -2248,11 +2245,11 @@
     font-weight: bold; }
     @media (min-width: 1199px) {
       .distributor__title p {
-        font-size: 24px; } }
+        font-size: 20px; } }
   .distributor__carousel {
     overflow: hidden; }
     .distributor__carousel__slide {
-      padding-top: 60px;
+      padding-top: 30px;
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       gap: 30px; }
@@ -2268,7 +2265,10 @@
             grid-template-columns: repeat(2, 1fr);
             margin: 0 0 0 auto;
             width: 100%;
-            height: 700px; } }
+            height: 570px; } }
+        @media (min-width: 1700px) {
+          .distributor__carousel__slide__imagen {
+            height: 800px; } }
       .distributor__carousel__slide__text {
         width: 70%;
         margin: auto; }
@@ -2282,7 +2282,7 @@
           margin: 0; }
           @media (min-width: 768px) {
             .distributor__carousel__slide__text h1 {
-              font-size: 35px; } }
+              font-size: 30px; } }
         .distributor__carousel__slide__text p {
           font-size: 15px;
           color: #FFFFFF; }
@@ -2332,7 +2332,7 @@
     height: 100%; }
   .swiper_distribuitor .swiper-horizontal > .swiper-pagination-bullets, .swiper_distribuitor .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper_distribuitor .swiper-pagination-custom, .swiper_distribuitor .swiper-pagination-fraction {
     position: relative;
-    padding: 50px 0;
+    padding: 20px 0;
     width: 100%;
     margin: auto;
     bottom: 0; }
@@ -2368,14 +2368,17 @@
   .rason h1.title {
     width: 100%;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     color: #F7C50A;
     text-shadow: 2px 2px 5px black;
     text-align: start;
     text-transform: uppercase;
     padding-bottom: 20px;
     margin: 0; }
-    @media (min-width: 768px) {
+    @media (min-width: 1400px) {
+      .rason h1.title {
+        font-size: 40px; } }
+    @media (min-width: 1700px) {
       .rason h1.title {
         font-size: 48px; } }
   .rason__target {
@@ -2385,7 +2388,8 @@
     padding: 15px; }
     @media (min-width: 1199px) {
       .rason__target {
-        height: 300px; } }
+        height: 300px;
+        padding: 30px 0; } }
     .rason__target h1 {
       text-align: center;
       padding-bottom: 30px;
@@ -2453,24 +2457,21 @@
     justify-content: center;
     flex-direction: column; }
   .start_win__target {
-    position: absolute;
-    bottom: 50px;
+    position: relative;
+    top: 150px;
     width: 70%;
     height: auto;
     background-color: rgba(0, 0, 0, 0.45);
     border: 1px solid #FFFFFF;
     padding: 15px; }
-    @media (min-width: 1199px) {
-      .start_win__target {
-        width: 40%; } }
     .start_win__target p {
-      font-size: 15px;
+      font-size: 18px;
       color: #FFFFFF;
       text-align: center;
       font-weight: normal; }
       @media (min-width: 1199px) {
         .start_win__target p {
-          font-size: 17px; } }
+          font-size: 20px; } }
     .start_win__target span {
       color: #F7C50A;
       font-weight: bold; }
