--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -24,7 +24,7 @@
         h1{
             width: 100%;
             font-weight: 600;
-            font-size: 25px;
+            font-size: 20px;
             color: $mikado_yellow;
             text-shadow: 2px 2px 5px black;
             text-align: start;
@@ -34,7 +34,7 @@
             text-align: center;
     
             @media(min-width:768px){
-                font-size: 48px;
+                font-size: 30px;
             }
         }
 
@@ -46,7 +46,7 @@
             
 
             @media(min-width: 1199px){
-                font-size: 24px;
+                font-size: 20px;
             }
         }
     }
@@ -56,7 +56,7 @@
         overflow: hidden;
 
         &__slide{
-            padding-top: 60px;
+            padding-top: 30px;
             display: grid;
             grid-template-columns: repeat(1, 1fr);
             gap: 30px;
@@ -74,7 +74,11 @@
                     grid-template-columns: repeat(2, 1fr);
                     margin: 0 0 0 auto;
                     width: 100%;
-                    height: 700px;
+                    height: 570px;
+                }
+
+                @media(min-width: 1700px){
+                    height: 800px;
                 }
     
             }
@@ -93,7 +97,7 @@
                     margin: 0;
             
                     @media(min-width:768px){
-                        font-size: 35px;
+                        font-size: 30px;
                     }
                 }
 
@@ -171,7 +175,7 @@
 
         .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction {
             position: relative;
-            padding: 50px 0;
+            padding: 20px 0;
             width: 100%;
             margin: auto;
             bottom: 0;
