--- a/scss/components/distibutor/_rason.scss
+++ b/scss/components/distibutor/_rason.scss
@@ -18,7 +18,7 @@
     h1.title{
         width: 100%;
         font-weight: 600;
-        font-size: 25px;
+        font-size: 30px;
         color: $mikado_yellow;
         text-shadow: 2px 2px 5px black;
         text-align: start;
@@ -26,7 +26,11 @@
         padding-bottom: 20px;
         margin: 0;
 
-        @media(min-width:768px){
+        @media(min-width:1400px){
+            font-size: 40px;
+        }
+
+        @media(min-width:1700px){
             font-size: 48px;
         }
     }
@@ -39,6 +43,7 @@
 
         @media(min-width: 1199px){
             height: 300px;
+            padding: 30px 0;
         }
 
         h1{
