--- a/scss/components/distibutor/_start_win.scss
+++ b/scss/components/distibutor/_start_win.scss
@@ -14,27 +14,24 @@
     }
 
     &__target{
-        position: absolute;
-        bottom: 50px;
+        position: relative;
+        top: 150px;
         width: 70%;
         height:auto;
         background-color: rgba(0, 0, 0, 0.45);
         border: 1px solid $white;
         padding: 15px;
 
-        @media(min-width: 1199px){
-            width: 40%;
-        }
 
         p{
-            font-size: 15px;
+            font-size: 18px;
             color: $white;
             text-align: center;
             font-weight: normal;
             
 
             @media(min-width: 1199px){
-                font-size: 17px;
+                font-size: 20px;
             }
         }
 
