--- a/css/main.css
+++ b/css/main.css
@@ -2547,7 +2547,6 @@
       padding: 60px 0; } }
   .contact .container-sm {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column; }
   .contact__location {
@@ -2579,7 +2578,7 @@
         margin: 0; }
         @media (min-width: 768px) {
           .contact__location__text h1 {
-            font-size: 35px;
+            font-size: 30px;
             padding-bottom: 20px;
             text-align: start; } }
       .contact__location__text__information {
@@ -2597,7 +2596,7 @@
           font-size: 15px; }
           @media (min-width: 768px) {
             .contact__location__text__information p {
-              font-size: 22px; } }
+              font-size: 17px; } }
   .contact h1.title {
     font-weight: 600;
     font-size: 25px;
@@ -2608,169 +2607,172 @@
     padding: 30px 0; }
     @media (min-width: 768px) {
       .contact h1.title {
-        font-size: 48px;
-        padding: 90px 0; } }
+        font-size: 30px;
+        padding: 60px 0; } }
   .contact__contact {
     display: grid;
     grid-template-columns: repeat(1, 1fr); }
     @media (min-width: 1199px) {
       .contact__contact {
         grid-template-columns: repeat(2, 1fr); } }
-    .contact__contact__form h1 {
-      font-weight: 600;
-      font-size: 20px;
-      color: #F7C50A;
-      text-align: center; }
-      @media (min-width: 768px) {
-        .contact__contact__form h1 {
-          font-size: 28px;
-          text-align: start; } }
-    .contact__contact__form p.subtitle {
-      color: #FFFFFF;
-      letter-spacing: 0.3px;
-      text-align: center;
-      font-size: 12px;
-      padding-bottom: 30px; }
-      @media (min-width: 768px) {
-        .contact__contact__form p.subtitle {
-          font-size: 17px;
-          text-align: start; } }
-    .contact__contact__form input, .contact__contact__form textarea {
-      width: 100%;
-      padding: 10px;
-      border-radius: 10px;
-      border: 1px solid #1B8233;
-      margin-bottom: 15px; }
-    .contact__contact__form textarea {
-      height: 200px; }
-    .contact__contact__form input[type=checkbox] {
-      width: auto;
-      margin-bottom: 0;
-      border: 1px solid #F7C50A; }
-    .contact__contact__form__input_name--active input {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__input_name__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__input_name__error--active {
-        display: flex; }
-    .contact__contact__form__input_email--active input {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__input_email__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__input_email__error--active {
-        display: flex; }
-    .contact__contact__form__input_phone--active input {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__input_phone__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__input_phone__error--active {
-        display: flex; }
-    .contact__contact__form__input_direction--active input {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__input_direction__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__input_direction__error--active {
-        display: flex; }
-    .contact__contact__form__input_nombre_cfe--active input {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__input_nombre_cfe__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__input_nombre_cfe__error--active {
-        display: flex; }
-    .contact__contact__form__input_number_cfe--active input {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__input_number_cfe__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__input_number_cfe__error--active {
-        display: flex; }
-    .contact__contact__form__textarea--active textarea {
-      border: 1px solid red;
-      margin-bottom: 0; }
-    .contact__contact__form__textarea__error {
-      width: 100%;
-      max-width: 471px;
-      display: none;
-      justify-content: flex-start;
-      padding: 5px 0;
-      text-align: start;
-      font-size: 12px;
-      color: red; }
-      .contact__contact__form__textarea__error--active {
-        display: flex; }
-    .contact__contact__form__button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #F7C50A;
-      /*text*/
-      font-size: 14px;
-      font-weight: 800;
-      margin-top: 17px;
-      letter-spacing: 0.5px;
-      padding: 12px 23px;
-      color: #FFFFFF;
-      margin: auto; }
-      @media (min-width: 768px) {
-        .contact__contact__form__button {
-          font-size: 20px;
-          margin: 0; } }
-      .contact__contact__form__button:hover {
+    .contact__contact__form {
+      width: 100%; }
+      .contact__contact__form h1 {
+        font-weight: 600;
+        font-size: 20px;
+        color: #F7C50A;
+        text-align: center; }
+        @media (min-width: 768px) {
+          .contact__contact__form h1 {
+            font-size: 25px;
+            text-align: start; } }
+      .contact__contact__form p.subtitle {
         color: #FFFFFF;
-        background-color: #000000;
+        letter-spacing: 0.3px;
+        text-align: center;
+        font-size: 12px;
+        padding-bottom: 30px; }
+        @media (min-width: 768px) {
+          .contact__contact__form p.subtitle {
+            font-size: 17px;
+            text-align: start; } }
+      .contact__contact__form input, .contact__contact__form textarea {
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        border: 1px solid #1B8233;
+        margin-bottom: 15px; }
+      .contact__contact__form textarea {
+        height: 200px; }
+      .contact__contact__form input[type=checkbox] {
+        width: auto;
+        margin-bottom: 0;
         border: 1px solid #F7C50A; }
-    .contact__contact__form__checkbox {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding-bottom: 10px; }
+      .contact__contact__form__input_name--active input {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__input_name__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__input_name__error--active {
+          display: flex; }
+      .contact__contact__form__input_email--active input {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__input_email__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__input_email__error--active {
+          display: flex; }
+      .contact__contact__form__input_phone--active input {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__input_phone__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__input_phone__error--active {
+          display: flex; }
+      .contact__contact__form__input_direction--active input {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__input_direction__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__input_direction__error--active {
+          display: flex; }
+      .contact__contact__form__input_nombre_cfe--active input {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__input_nombre_cfe__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__input_nombre_cfe__error--active {
+          display: flex; }
+      .contact__contact__form__input_number_cfe--active input {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__input_number_cfe__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__input_number_cfe__error--active {
+          display: flex; }
+      .contact__contact__form__textarea--active textarea {
+        border: 1px solid red;
+        margin-bottom: 0; }
+      .contact__contact__form__textarea__error {
+        width: 100%;
+        max-width: 471px;
+        display: none;
+        justify-content: flex-start;
+        padding: 5px 0;
+        text-align: start;
+        font-size: 12px;
+        color: red; }
+        .contact__contact__form__textarea__error--active {
+          display: flex; }
+      .contact__contact__form__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #F7C50A;
+        /*text*/
+        font-size: 14px;
+        font-weight: 800;
+        margin-top: 17px;
+        letter-spacing: 0.5px;
+        padding: 12px 23px;
+        color: #FFFFFF;
+        margin: auto; }
+        @media (min-width: 768px) {
+          .contact__contact__form__button {
+            font-size: 20px;
+            margin: 0; } }
+        .contact__contact__form__button:hover {
+          color: #FFFFFF;
+          background-color: #000000;
+          border: 1px solid #F7C50A; }
+      .contact__contact__form__checkbox {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding-bottom: 10px;
+        font-size: 17px; }
     .contact__contact__imagen {
       width: 80%;
       margin: auto;
