--- a/css/main.css
+++ b/css/main.css
@@ -496,10 +496,11 @@
           justify-content: flex-start; } }
       .hero__form--one__text h1 {
         width: 100%;
-        font-size: 30px;
+        font-size: 25px;
         color: #F7C50A;
         text-shadow: 2px 2px 5px black;
-        text-transform: uppercase; }
+        text-transform: uppercase;
+        text-align: center; }
         @media (min-width: 992px) {
           .hero__form--one__text h1 {
             text-align: start;
