--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -71,10 +71,11 @@
 
                 h1{
                     width: 100%;
-                    font-size: 30px;
+                    font-size: 25px;
                     color: $mikado_yellow;
                     text-shadow: 2px 2px 5px black;
                     text-transform: uppercase;
+                    text-align: center;
     
                     @media(min-width: 992px){
                         text-align: start;
