--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -4,6 +4,10 @@
 	position: relative;
 	height: 500px;
 
+    @media(min-width:1199px){
+        height: 800px;
+    }
+
     &--prev{
 		position: absolute;
         left: 15px;
